# OllamaAid

./: .gitignore  AGENTS.md  Errors  README.md  README_CN.md  benchmark_results.json  benchmark_results_full.json  get_embedd.sh  get_trans.sh  pyproject.toml  requirements.txt  results.csv  upload_pypi.bat  upload_pypi.sh
images/: ollama-aid_delete_help.txt  ollama-aid_export_help.txt  ollama-aid_help.txt  ollama-aid_import_help.txt  ollama-aid_info_help.txt  ollama-aid_list_help.txt  ollama-aid_resolve_help.txt  ollama-aid_run_help.txt  ollama-aid_test_help.txt  ollama-aid_trends_help.txt  ollama-aid_update_help.txt
ollama_aid/: __init__.py  __main__.py  __version__.py  api.py
ollama_aid/cli/: main.py
ollama_aid/core/: benchmark_data.py  chat_eval.py  code_eval.py  config.py  embedder.py  i18n.py  manager.py  models.py  reranker.py  runner.py  tester.py  tool_caller.py  translator.py  trends.py
ollama_aid/gui/: main.py
ollama_aid/web/: main.py
ollama_aid/web/templates/: index.html
scripts/: benchmark_all.py  benchmark_embeddings.py  benchmark_rerankers.py  generate_help_screenshots.py
tests/: test_core.py
